# folder-datetime-fix

./: .gitignore  .repokit.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  fdtfix.py  folder_scanner.py  mod_fldr_dt.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_version.txt  timestamp_fixer.py  version.py
.github/: funding.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: codeql-analysis.yml  main.yml  publish.yml  release.yml  tests.yml
docs/: Analyze-Strategies.md  Architecture-Overview.md  Exclude-Include-Patterns.md  Recipes-and-Examples.md  Troubleshooting.md  analyze-strategies.md
folder_datetime_fix/: __init__.py  analysis_strategies.py  analysis_strategies.py.backup  analysis_strategies_dazzle.py  analyze_help.py  cache.py  cache_wrapper.py  cli.py  console_safe.py  folder_scanner.py  folder_scanner_dazzle.py  help_topics.py  strategy_help.py  system_files.py  trace_utils.py  tree_visualizer.py  unc_handler.py  version.py
folder_datetime_fix/help/: help_manager.py
folder_datetime_fix/help/sections/: __init__.py  advanced.py  basic.py  detailed_help.py  network.py  quick_start.py  strategy.py  tips.py
folder_datetime_fix/help/topics/: __init__.py  detailed_content.py  help_topics.py  validation_results.py
folder_datetime_fix/help_lib/: content_registry.py  formatters.py
folder_datetime_fix/help_system/: __init__.py  core.py
scripts/: README.md  clean.bat  clean.py  debug_tree.py  delete_nul.py  install-hooks.sh  update-version.sh
scripts/hooks/: pre-commit  pre-commit-basic  pre-push
scripts/setup/: README.md  setup_dev_environment.bat  validate_dev_environment.py
scripts/unctools/: README.md  TROUBLESHOOTING.md  debug_module_import.py  diagnose_unctools_env.py
src/folder_datetime_fix/: __main__.py  cache.py  exclusion_filter.py  folder_scanner_dazzle.py  timestamp_fixer.py  unc_handler.py  version.py
src/folder_datetime_fix/help/: __init__.py
src/folder_datetime_fix/help/sections/: exclusion.py
src/folder_datetime_fix/help_lib/: __init__.py  core.py
tests/: README.md  baseline_before_dazzletreelib.py  baseline_results.json  create_test_structure.py  run_tests.py  test_analysis_strategies.py  test_cache_completeness.py  test_cli_integration.py  test_console_safe.py  test_dazzle_scanner.py  test_dazzle_strategies.py  test_depth_ranges.py  test_early_termination.py  test_exclusion_filter.py  test_folder_scanner.py  test_folderonly_completeness.py  test_issue15_regression.py  test_issue16_regression.py  test_issue_17_integration.py  test_max_depth_detection.py  test_mod_fldr_dt.py  test_permission_error_handling.py  test_timestamp_fixer.py  test_tree_strategy.py  test_unc_handler.py  test_unctools_integration.py
tests/checklists/: v0.7.7__Epic__modified-datetime-fix-ci-fix-arc.md  v0.8.4__Epic__pypi-src-migration.md
tests/one-offs/: calc_memory.py  check_python.py  debug_cache_issue17.py  debug_exclusion_filter.py  debug_recursive_patterns.py  old_cache_performance.py.historical  old_dazzletreelib_integration.py.historical  preflight_clean_venv.py  test_args.py  test_auto_parent_inclusion.py  test_cache_correct_expectations.py  test_cache_fallback.py  test_debug_cache.py  test_debug_depth.py  test_debug_tracking.py  test_error_handling_direct.py  test_error_handling_final.py  test_exclusion_behavior.py  test_help_system.py  test_include_directories.py  test_include_traversal.py  test_issue15.py  test_issue15_correct.py  test_issue15_simple.py  test_memory_calculations.py  test_permission_handling.py  test_semantic_analysis.py  test_simple_error_handling.py  test_unc_error_handling.py  test_unctools_detection.py  test_walk_filter.py  validate_unc_timestamps.py
tests/one-offs/unctools_debugging/: README.md  debug_unctools.py  debug_verbose.py  test_unctools_env.bat
tests/performance/: __init__.py  base.py  fixtures.py  metrics.py  test_benchmarks.py
