[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-datetime-fix"
dynamic = ["version"]
description = "Fix folder timestamps corrupted by system files like thumbs.db on Windows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Dustin Darcy", email = "6962246+djdarcy@users.noreply.github.com"},
]
keywords = [
    "windows",
    "folder",
    "timestamp",
    "thumbs.db",
    "desktop.ini",
    "filesystem",
    "utilities",
    "datetime",
    "modification-time"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/djdarcy/modified_datetime_fix"
Documentation = "https://github.com/djdarcy/modified_datetime_fix#readme"
Repository = "https://github.com/djdarcy/modified_datetime_fix"
"Bug Reports" = "https://github.com/djdarcy/modified_datetime_fix/issues"
"Buy Me a Coffee" = "https://www.buymeacoffee.com/djdarcy"

[project.scripts]
folder-datetime-fix = "folder_datetime_fix.cli:main"
mod_fldr_dt = "folder_datetime_fix.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=7.3.0",
    "mypy>=1.0.0",
]
unc = [
    "unctools>=0.1.0",
]

[tool.setuptools.dynamic]
version = {attr = "folder_datetime_fix.version.PIP_VERSION"}

[tool.setuptools.packages.find]
include = ["folder_datetime_fix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true