[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-datetime-fix"
dynamic = ["version"]
description = "Fix folder timestamps corrupted by system files like thumbs.db on Windows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Bedrock traversal library (cache + async tree walking) -- imported by
    # the scanner/strategy tests as `dazzletreelib.aio`.
    "dazzletreelib>=0.1.0",
    # L1 file toolkit -- owns cross-platform path normalization since the
    # unctools 0.2.0 probe-not-mutate split; consumed by unc_handler. Pulls
    # dazzle-lib (>=3.9) transitively, which is what sets the 3.9 floor above.
    "dazzle-filekit>=0.3.0",
]
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Dustin Darcy", email = "6962246+djdarcy@users.noreply.github.com"},
]
keywords = [
    "windows",
    "folder",
    "timestamp",
    "thumbs.db",
    "desktop.ini",
    "filesystem",
    "utilities",
    "datetime",
    "modification-time"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/DazzleTools/folder-datetime-fix"
Documentation = "https://github.com/DazzleTools/folder-datetime-fix#readme"
Repository = "https://github.com/DazzleTools/folder-datetime-fix"
"Bug Reports" = "https://github.com/DazzleTools/folder-datetime-fix/issues"
"Buy Me a Coffee" = "https://www.buymeacoffee.com/djdarcy"

[project.scripts]
folder-datetime-fix = "folder_datetime_fix.cli:main"
mod_fldr_dt = "folder_datetime_fix.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    # Required by the async tests (test_permission_error_handling and the
    # dazzletreelib.aio integration tests). It was previously only present
    # ambiently in dev environments, so CI -- which installs only what [dev]
    # declares -- failed with "async def functions are not natively supported".
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.19.1",
]
unc = [
    # 0.2.0+ has classify_path_origin (the probe-not-mutate rename) that
    # unc_handler imports; older unctools would silently disable UNC support.
    "unctools>=0.2.0",
]

[tool.setuptools.dynamic]
version = {attr = "folder_datetime_fix.version.PIP_VERSION"}

[tool.setuptools.packages.find]
include = ["folder_datetime_fix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true